# NGSPipeDb

./: .gitignore  LICENSE  MANIFEST.in  PKG-INFO  README.md  setup.cfg  test.sh  work.sh
docs/: 404.html  index.html  sitemap.xml
docs/NGSDb/: index.html
docs/NGSPipe-ChIP-seq/: index.html
docs/NGSPipe-bsa/: index.html
docs/NGSPipe-exogenous-insertion/: index.html
docs/NGSPipe-medicago-tnt1/: index.html
docs/NGSPipe-resequecing/: index.html
docs/NGSPipe-trinity/: index.html
docs/NGSPipeDb/: index.html
docs/Reference-based-NGSPipe-RNA-seq/: index.html
docs/Reference-based-NGSPipe-lncRNA-analysis/: index.html
docs/Reference-free-NGSPipe-RNA-seq/: index.html
docs/Rference-based-NGSPipe-lncRNA-analysis/: index.html
docs/changelog/: index.html
docs/conda/: index.html
docs/datasets/: index.html
docs/download_sra/: index.html
docs/linux/: index.html
docs/ngs/: index.html
docs/search/: search_index.json
docs/todo/: index.html
docs/trouble_shooting/: index.html
mkdocs/: mkdocs.yml  readthedocs.yml
mkdocs/markdowns/: NGSDb.md  NGSPipe-ChIP-seq.md  NGSPipe-bsa.md  NGSPipe-exogenous-insertion.md  NGSPipe-medicago-tnt1.md  NGSPipe-resequecing.md  NGSPipe-trinity.md  NGSPipeDb.md  Reference-based-NGSPipe-RNA-seq.md  Reference-based-NGSPipe-lncRNA-analysis.md  Reference-free-NGSPipe-RNA-seq.md  changelog.md  ngs.md  (+9 more)
ngspipedb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ngspipedbcli/: __main__.py  app_click.py  app_parse.py  common.py  download.py  env.py  gui.py  man.py  project.py  runpipe.py  server.py
(+314 files in other folders)
