[metadata]
name = ngspipedb
version = 0.0.17
description = NGSPipeDb is an automated pipeline for parallel processing of huge next generation sequencing (NGS) data and database generation.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = Xuan Zhang
author_emial = 296373256@qq.com
url = https://xuanblo.github.io/NGSPipeDb/
platforms = Linux, Mac OS X, Windows
keywords = pipeline, workflow, snakemake, bioinformatics, RNA-Seq, Chip-Seq, resequencing, database, website, Django
project_urls = 
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = ngspipedbcli
install_requires =
    rich > 10
    click
    conda-pack
    ruamel.yaml
include_package_data = True
scripts =
    ngspipedbcli/ngspipe/scripts/generate_replicat.py
    ngspipedbcli/ngspipe/scripts/download_testdata.sh

[options.entry_points]
console_scripts =
    ngspipedb = ngspipedbcli.__main__:main

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

